Add skia extension to allow setting default fontmgr on linux. Use it to allow the linux blimp client to use android fonts

BUG=617821

Review-Url: https://codereview.chromium.org/2500643002
Cr-Commit-Position: refs/heads/master@{#432023}

Former-commit-id: f6c1cd2bb6a2253e9547c091671c98ed28300685