blimp/client/core/switches/blimp_client_switches.cc
@@ -23,5 +23,7 @@ const char kEngineTransport[] = "engine-transport";
 
 const char kDownloadWholeDocument[] = "download-whole-document";
 
+const char kAndroidFontsPath[] = "android-fonts-path";
+
 }  // namespace switches
 }  // namespace blimp
